# fullstack-ai-marketing-platform

./: .gitignore  notes.txt  package-lock.json  package.json
asset-processing-service/: Dockerfile  pyproject.toml  settings.json
asset-processing-service/asset_processing_service/: api_client.py  config.py  job_processor.py  logger.py  main.py  media_processor.py  models.py
asset-processing-service/test_env/: pyvenv.cfg
nextjs/: drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
nextjs/app/: globals.css  layout.tsx
nextjs/app/(dashboard)/: layout.tsx
nextjs/app/(landing)/: page.tsx
nextjs/app/WebScraper/: Scraper.tsx
nextjs/app/browser-extension/: background.js  content.js  manifest.json
nextjs/app/interfaces/: CommonPrompts.ts
nextjs/app/skeleton/: page.tsx
nextjs/app/utils/: GoogleDrive.tsx  GoogleDriveFiles.tsx  formateFileTokens.ts  imageUtils.ts  sideBarUtils.ts  validateUrl.ts
nextjs/components/: ConfigurePromptsStep.tsx  ConfirmationModal.tsx  GenerateContentStep.tsx  GenerateContextStep.tsx  GenerateStepBody.tsx  ManageUploadStep.tsx  ProjectList.tsx  SideBar.tsx  SideBarNav.tsx  SideBarToggle.tsx  SubscriptionManager.tsx  UserProfileSection.tsx
nextjs/components/crawler/: ActionDropDown.tsx  ActionDropDownViewer.tsx  CookieManager.tsx  CrawlHistory.tsx  CrawlHistoryTab.tsx  CrawlResultModal.tsx  CrawlTrigger.tsx  (+5 more)
nextjs/lib/: config.ts  constants.ts  imageprops.ts  stripe.ts  triggerCrawler.ts  utils.ts
nextjs/server/: actions.ts  mutation.ts
(+113 files in other folders)
